<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_key_instruction"
        android:layout_marginBottom="20dp" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/apiKeyInput"
        android:text="@string/api_key" />
    <EditText
        android:id="@+id/apiKeyInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/apiSecretKeyInput"
        android:text="@string/api_secret_key" />
    <EditText
        android:id="@+id/apiSecretKeyInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:importantForAutofill="no"/>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onClick"
        android:enabled="false"
        android:layout_marginBottom="20dp" />
</androidx.appcompat.widget.LinearLayoutCompat>
